fixed collapsed menu

--- a/public/style.css
+++ b/public/style.css
@@ -83,54 +83,65 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
-}
-
-.navbar-nav > li > a {
-  font-weight: bold;
-  text-transform: uppercase;
-  font-size: 11px;
-}
-
-.navbar-left > li:hover {
-    background-color: #e7e7e7;
-
-  box-shadow: 0 -10px pink inset;
-
-  -o-transition:.5s;
-  -ms-transition:.5s;
-  -moz-transition:.5s;
-  -webkit-transition:.5s;
-  /* ...and now for the proper property */
-  transition:.5s;
+    .navbar-nav > li > a {
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 11px;
   }
 
-.navbar-right > li:hover {
+  .navbar-left > li:hover {
     background-color: #e7e7e7;
 
-  box-shadow: 0 -10px gold inset;
+    box-shadow: 0 -10px pink inset;
 
-  -o-transition:.5s;
-  -ms-transition:.5s;
-  -moz-transition:.5s;
-  -webkit-transition:.5s;
-  /* ...and now for the proper property */
-  transition:.5s;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    /* ...and now for the proper property */
+    transition:.5s;
   }
 
-.navbar-nav .active > a {
-  box-shadow: 0 -10px pink inset;
+  .navbar-right > li:hover {
+    background-color: #e7e7e7;
+
+    box-shadow: 0 -10px gold inset;
+
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    /* ...and now for the proper property */
+    transition:.5s;
+  }
+
+  .navbar-nav .active > a,  .navbar-nav .open > a:focus {
+    box-shadow: 0 -10px pink inset;
+  }
+
+
+
+    .navbar-left > a:active {
+    box-shadow: 0 -10px pink inset;
+  }
+
+
+
+  ul.nav li.dropdown:hover > ul.dropdown-menu {
+      display: block;    
+  }
 }
 
 .navbar-header > a:hover {
 
  box-shadow: inset 0px -10px 0px pink, inset 20rem 0px 0px #e7e7e7;
-/*  box-shadow: inset 0 -10px 0px #e7e7e7;*/
-     -o-transition:.5s;
-  -ms-transition:.5s;
-  -moz-transition:.5s;
-  -webkit-transition:.5s;
-  /* ...and now for the proper property */
-  transition:.5s;
+ /*  box-shadow: inset 0 -10px 0px #e7e7e7;*/
+ -o-transition:.5s;
+ -ms-transition:.5s;
+ -moz-transition:.5s;
+ -webkit-transition:.5s;
+ /* ...and now for the proper property */
+ transition:.5s;
 }
 
 
@@ -148,25 +159,30 @@ body {
 }
 
 .col-lg-6 > h4 > a:hover {
-   color: #e7e7e7;
-   font-style: normal;
-   text-decoration: none;
-     -o-transition:.5s;
-  -ms-transition:.5s;
-  -moz-transition:.5s;
-  -webkit-transition:.5s;
-  /* ...and now for the proper property */
-  transition:.5s;
+ color: #e7e7e7;
+ font-style: normal;
+ text-decoration: none;
+ -o-transition:.5s;
+ -ms-transition:.5s;
+ -moz-transition:.5s;
+ -webkit-transition:.5s;
+ /* ...and now for the proper property */
+ transition:.5s;
 }
 
 .col-lg-6 > h4 > a {
-   color: black;
+ color: black;
 }
 
 .col-lg-6 > h4 {
-   font-family: "Open Sans";
+ font-family: "Open Sans";
 }
 
-ul.nav li.dropdown:hover > ul.dropdown-menu {
-    display: block;    
+.navbar-nav .open .dropdown-menu {
+  background-color: #fff;
+}
+
+.dropdown-header {
+  font-weight: bold;    
+  font-style: italic;
 }
